优化表情服务实现结构